set(LOCAL_PATH ${KERNEL_ROOT}/kernel)

set(SOURCE_FILES "")

add_c_source(SOURCE_FILES ${LOCAL_PATH} fork)
add_c_source(SOURCE_FILES ${LOCAL_PATH} exec_domain)
add_c_source(SOURCE_FILES ${LOCAL_PATH} panic)
add_c_source(SOURCE_FILES ${LOCAL_PATH} printk)
add_c_source(SOURCE_FILES ${LOCAL_PATH} cpu)
add_c_source(SOURCE_FILES ${LOCAL_PATH} exit)
add_c_source(SOURCE_FILES ${LOCAL_PATH} itimer)
add_c_source(SOURCE_FILES ${LOCAL_PATH} time)
add_c_source(SOURCE_FILES ${LOCAL_PATH} softirq)
add_c_source(SOURCE_FILES ${LOCAL_PATH} resource)
add_c_source(SOURCE_FILES ${LOCAL_PATH} sysctl)
add_c_source(SOURCE_FILES ${LOCAL_PATH} sysctl_binary)
add_c_source(SOURCE_FILES ${LOCAL_PATH} capability)
add_c_source(SOURCE_FILES ${LOCAL_PATH} ptrace)
add_c_source(SOURCE_FILES ${LOCAL_PATH} timer)
add_c_source(SOURCE_FILES ${LOCAL_PATH} user)
add_c_source(SOURCE_FILES ${LOCAL_PATH} signal)
add_c_source(SOURCE_FILES ${LOCAL_PATH} sys)
add_c_source(SOURCE_FILES ${LOCAL_PATH} kmod)
add_c_source(SOURCE_FILES ${LOCAL_PATH} workqueue)
add_c_source(SOURCE_FILES ${LOCAL_PATH} pid)
add_c_source(SOURCE_FILES ${LOCAL_PATH} task_work)
add_c_source(SOURCE_FILES ${LOCAL_PATH} rcupdate)
add_c_source(SOURCE_FILES ${LOCAL_PATH} extable)
add_c_source(SOURCE_FILES ${LOCAL_PATH} params)
add_c_source(SOURCE_FILES ${LOCAL_PATH} posix-timers)
add_c_source(SOURCE_FILES ${LOCAL_PATH} kthread)
add_c_source(SOURCE_FILES ${LOCAL_PATH} wait)
add_c_source(SOURCE_FILES ${LOCAL_PATH} sys_ni)
add_c_source(SOURCE_FILES ${LOCAL_PATH} posix-cpu-timers)
add_c_source(SOURCE_FILES ${LOCAL_PATH} mutex)
add_c_source(SOURCE_FILES ${LOCAL_PATH} hrtimer)
add_c_source(SOURCE_FILES ${LOCAL_PATH} rwsem)
add_c_source(SOURCE_FILES ${LOCAL_PATH} nsproxy)
add_c_source(SOURCE_FILES ${LOCAL_PATH} srcu)
add_c_source(SOURCE_FILES ${LOCAL_PATH} semaphore)
add_c_source(SOURCE_FILES ${LOCAL_PATH} notifier)
add_c_source(SOURCE_FILES ${LOCAL_PATH} ksysfs)
add_c_source(SOURCE_FILES ${LOCAL_PATH} cred)
add_c_source(SOURCE_FILES ${LOCAL_PATH} async)
add_c_source(SOURCE_FILES ${LOCAL_PATH} range)
add_c_source(SOURCE_FILES ${LOCAL_PATH} groups)
add_c_source(SOURCE_FILES ${LOCAL_PATH} lglock)
add_c_source(SOURCE_FILES ${LOCAL_PATH} smpboot)

if (${CONFIG_CHECKPOINT_RESTORE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kcmp)
endif ()
if (${CONFIG_FREEZER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} freezer)
endif ()
if (${CONFIG_PROFILING})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} profile)
endif ()
if (${CONFIG_STACKTRACE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} stacktrace)
endif ()
if (${CONFIG_DEBUG_MUTEXES})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mutex-debug)
endif ()
if (${CONFIG_LOCKDEP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} lockdep)
endif ()
if (${CONFIG_PROC_FS})
    if (${CONFIG_LOCKDEP})
        add_c_source(SOURCE_FILES ${LOCAL_PATH} lockdep_proc)
    endif ()
endif ()
if (${CONFIG_FUTEX})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} futex)
endif ()
if (${CONFIG_COMPAT})
    if (${CONFIG_FUTEX})
        add_c_source(SOURCE_FILES ${LOCAL_PATH} futex_compat)
    endif ()
endif ()
if (${CONFIG_RT_MUTEXES})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rtmutex)
endif ()
if (${CONFIG_DEBUG_RT_MUTEXES})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rtmutex-debug)
endif ()
if (${CONFIG_RT_MUTEX_TESTER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rtmutex-tester)
endif ()
if (${CONFIG_GENERIC_ISA_DMA})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} dma)
endif ()
if (${CONFIG_SMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} smp)
endif ()
if (${CONFIG_SMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} up)
endif ()
if (${CONFIG_SMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} spinlock)
endif ()
if (${CONFIG_DEBUG_SPINLOCK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} spinlock)
endif ()
if (${CONFIG_PROVE_LOCKING})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} spinlock)
endif ()
if (${CONFIG_UID16})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} uid16)
endif ()
if (${CONFIG_MODULES})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} module)
endif ()
if (${CONFIG_MODULE_SIG})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} module_signing)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} modsign_pubkey)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} modsign_certificate)
endif ()
if (${CONFIG_KALLSYMS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kallsyms)
endif ()
if (${CONFIG_BSD_PROCESS_ACCT})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} acct)
endif ()
if (${CONFIG_KEXEC})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kexec)
endif ()
if (${CONFIG_BACKTRACE_SELF_TEST})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} backtracetest)
endif ()
if (${CONFIG_COMPAT})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} compat)
endif ()
if (${CONFIG_CGROUPS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} cgroup)
endif ()
if (${CONFIG_CGROUP_FREEZER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} cgroup_freezer)
endif ()
if (${CONFIG_CPUSETS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} cpuset)
endif ()
if (${CONFIG_UTS_NS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} utsname)
endif ()
if (${CONFIG_USER_NS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} user_namespace)
endif ()
if (${CONFIG_PID_NS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} pid_namespace)
endif ()
if (${CONFIG_IKCONFIG})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} configs)
endif ()
if (${CONFIG_RESOURCE_COUNTERS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} res_counter)
endif ()
if (${CONFIG_SMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} stop_machine)
endif ()
if (${CONFIG_KPROBES_SANITY_TEST})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} test_kprobes)
endif ()
if (${CONFIG_AUDIT})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} audit)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} auditfilter)
endif ()
if (${CONFIG_AUDITSYSCALL})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} auditsc)
endif ()
if (${CONFIG_AUDIT_WATCH})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} audit_watch)
endif ()
if (${CONFIG_AUDIT_TREE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} audit_tree)
endif ()

if (${CONFIG_KPROBES})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kprobes)
endif ()

if (${CONFIG_DETECT_HUNG_TASK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} hung_task)
endif ()
if (${CONFIG_LOCKUP_DETECTOR})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} watchdog)
endif ()
if (${CONFIG_SECCOMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} seccomp)
endif ()
if (${CONFIG_RCU_TORTURE_TEST})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutorture)
endif ()
if (${CONFIG_TREE_RCU})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutree)
endif ()
if (${CONFIG_TREE_PREEMPT_RCU})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutree)
endif ()
if (${CONFIG_TREE_RCU_TRACE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutree_trace)
endif ()
if (${CONFIG_TINY_RCU})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutiny)
endif ()
if (${CONFIG_TINY_PREEMPT_RCU})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rcutiny)
endif ()
if (${CONFIG_RELAY})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} relay)
endif ()
if (${CONFIG_SYSCTL})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} utsname_sysctl)
endif ()
if (${CONFIG_TASK_DELAY_ACCT})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} delayacct)
endif ()
if (${CONFIG_TASKSTATS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} taskstats)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} taskstats)
endif ()
if (${CONFIG_TRACEPOINTS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} tracepoint)
endif ()
if (${CONFIG_LATENCYTOP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} latencytop)
endif ()
if (${CONFIG_BINFMT_ELF})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} elfcore)
endif ()
if (${CONFIG_COMPAT_BINFMT_ELF})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} elfcore)
endif ()
if (${CONFIG_BINFMT_ELF_FDPIC})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} elfcore)
endif ()

if (${CONFIG_IRQ_WORK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} irq_work)
endif ()
if (${CONFIG_CPU_PM})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} cpu_pm)
endif ()


if (${CONFIG_USER_RETURN_NOTIFIER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} user-return-notifier)
endif ()
if (${CONFIG_PADATA})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} padata)
endif ()
if (${CONFIG_CRASH_DUMP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} crash_dump)
endif ()
if (${CONFIG_JUMP_LABEL})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} jump_label)
endif ()
if (${CONFIG_CONTEXT_TRACKING})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} context_tracking)
endif ()

add_library(kernel STATIC ${SOURCE_FILES})

if (${CONFIG_GCOV_KERNEL})
    add_subdirectory(gcov)
    target_link_libraries(kernel
            kernel-gcov
            )
endif ()
if (${CONFIG_KGDB})
    add_subdirectory(debug)
    target_link_libraries(kernel
            kernel-debug
            )
endif ()
set(CONTAIN_TRACE OFF)
if (${CONFIG_FUNCTION_TRACER})
    if (NOT ${CONTAIN_TRACE})
        add_subdirectory(trace)
        target_link_libraries(kernel
                kernel-trace
                )
        set(CONTAIN_TRACE ON)
    endif ()
endif ()
if (${CONFIG_TRACING})
    if (NOT ${CONTAIN_TRACE})
        add_subdirectory(trace)
        target_link_libraries(kernel
                kernel-trace
                )
        set(CONTAIN_TRACE ON)
    endif ()
endif ()
if (${CONFIG_TRACE_CLOCK})
    if (NOT ${CONTAIN_TRACE})
        add_subdirectory(trace)
        target_link_libraries(kernel
                kernel-trace
                )
        set(CONTAIN_TRACE ON)
    endif ()
endif ()
if (${CONFIG_RING_BUFFER})
    if (NOT ${CONTAIN_TRACE})
        add_subdirectory(trace)
        target_link_libraries(kernel
                kernel-trace
                )
        set(CONTAIN_TRACE ON)
    endif ()
endif ()
if (${CONFIG_TRACEPOINTS})
    if (NOT ${CONTAIN_TRACE})
        add_subdirectory(trace)
        target_link_libraries(kernel
                kernel-trace
                )
        set(CONTAIN_TRACE ON)
    endif ()
endif ()
if (${CONFIG_PERF_EVENTS})
    add_subdirectory(events)
    target_link_libraries(kernel
            kernel-events
            )
endif ()

add_subdirectory(sched)
add_subdirectory(power)
add_subdirectory(cpu)
add_subdirectory(irq)
add_subdirectory(time)
target_link_libraries(kernel
        kernel-sched
        kernel-power
        kernel-cpu
        kernel-irq
        kernel-time
        )
