set(LOCAL_PATH ${KERNEL_ROOT}/mm)

set(SOURCE_FILES "")


if (${CONFIG_MMU})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} fremap)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} highmem)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} madvise)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} memory)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mincore)

    add_c_source(SOURCE_FILES ${LOCAL_PATH} mlock)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mmap)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mprotect)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mremap)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} msync)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} rmap)

    add_c_source(SOURCE_FILES ${LOCAL_PATH} vmalloc)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} pagewalk)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} pgtable-generic)
    if (${CONFIG_CROSS_MEMORY_ATTACH})
        add_c_source(SOURCE_FILES ${LOCAL_PATH} process_vm_access)
    endif ()
else ()
    add_c_source(SOURCE_FILES ${LOCAL_PATH} nommu)
endif ()

add_library(mm-mmu STATIC ${SOURCE_FILES})

set(SOURCE_FILES "")

add_c_source(SOURCE_FILES ${LOCAL_PATH} filemap)
add_c_source(SOURCE_FILES ${LOCAL_PATH} mempool)
add_c_source(SOURCE_FILES ${LOCAL_PATH} oom_kill)
add_c_source(SOURCE_FILES ${LOCAL_PATH} fadvise)
add_c_source(SOURCE_FILES ${LOCAL_PATH} maccess)
add_c_source(SOURCE_FILES ${LOCAL_PATH} page_alloc)
add_c_source(SOURCE_FILES ${LOCAL_PATH} page-writeback)
add_c_source(SOURCE_FILES ${LOCAL_PATH} readahead)
add_c_source(SOURCE_FILES ${LOCAL_PATH} swap)
add_c_source(SOURCE_FILES ${LOCAL_PATH} truncate)
add_c_source(SOURCE_FILES ${LOCAL_PATH} vmscan)
add_c_source(SOURCE_FILES ${LOCAL_PATH} shmem)
add_c_source(SOURCE_FILES ${LOCAL_PATH} util)
add_c_source(SOURCE_FILES ${LOCAL_PATH} mmzone)
add_c_source(SOURCE_FILES ${LOCAL_PATH} vmstat)
add_c_source(SOURCE_FILES ${LOCAL_PATH} backing-dev)
add_c_source(SOURCE_FILES ${LOCAL_PATH} mm_init)
add_c_source(SOURCE_FILES ${LOCAL_PATH} mmu_context)
add_c_source(SOURCE_FILES ${LOCAL_PATH} percpu)
add_c_source(SOURCE_FILES ${LOCAL_PATH} slab_common)
add_c_source(SOURCE_FILES ${LOCAL_PATH} compaction)
add_c_source(SOURCE_FILES ${LOCAL_PATH} balloon_compaction)
add_c_source(SOURCE_FILES ${LOCAL_PATH} interval_tree)
add_c_source(SOURCE_FILES ${LOCAL_PATH} showmem)
add_c_source(SOURCE_FILES ${LOCAL_PATH} init-mm)
if (${CONFIG_NO_BOOTMEM})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} nobootmem)
else ()
    add_c_source(SOURCE_FILES ${LOCAL_PATH} bootmem)
endif ()
if (${CONFIG_HAVE_MEMBLOCK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} memblock)
endif ()
if (${CONFIG_BOUNCE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} bounce)
endif ()
if (${CONFIG_SWAP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} page_io)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} swap_state)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} swapfile)
endif ()
if (${CONFIG_FRONTSWAP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} frontswap)
endif ()
if (${CONFIG_ZSWAP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} zswap)
endif ()
if (${CONFIG_HAS_DMA})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} dmapool)
endif ()
if (${CONFIG_HUGETLBFS})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} hugetlb)
endif ()
if (${CONFIG_NUMA})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mempolicy)
endif ()
if (${CONFIG_SPARSEMEM})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} sparse)
endif ()
if (${CONFIG_SPARSEMEM_VMEMMAP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} sparse-vmemmap)
endif ()
if (${CONFIG_SLOB})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} slob)
endif ()
if (${CONFIG_MMU_NOTIFIER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} mmu_notifier)
endif ()
if (${CONFIG_KSM})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} ksm)
endif ()
if (${CONFIG_PAGE_POISONING})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} debug-pagealloc)
endif ()
if (${CONFIG_SLAB})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} slab)
endif ()
if (${CONFIG_SLUB})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} slub)
endif ()
if (${CONFIG_KMEMCHECK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kmemcheck)
endif ()
if (${CONFIG_FAILSLAB})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} failslab)
endif ()
if (${CONFIG_MEMORY_HOTPLUG})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} memory_hotplug)
endif ()
if (${CONFIG_FS_XIP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} filemap_xip)
endif ()
if (${CONFIG_MIGRATION})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} migrate)
endif ()
if (${CONFIG_QUICKLIST})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} quicklist)
endif ()
if (${CONFIG_TRANSPARENT_HUGEPAGE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} huge_memory)
endif ()
if (${CONFIG_MEMCG})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} memcontrol)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} page_cgroup)
    add_c_source(SOURCE_FILES ${LOCAL_PATH} vmpressure)
endif ()
if (${CONFIG_CGROUP_HUGETLB})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} hugetlb_cgroup)
endif ()
if (${CONFIG_MEMORY_FAILURE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} memory-failure)
endif ()
if (${CONFIG_HWPOISON_INJECT})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} hwpoison-inject)
endif ()
if (${CONFIG_DEBUG_KMEMLEAK})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kmemleak)
endif ()
if (${CONFIG_DEBUG_KMEMLEAK_TEST})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} kmemleak-test)
endif ()
if (${CONFIG_CLEANCACHE})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} cleancache)
endif ()
if (${CONFIG_MEMORY_ISOLATION})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} page_isolation)
endif ()
if (${CONFIG_PAGE_OWNER})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} pageowner)
endif ()
if (${CONFIG_ZBUD})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} zbud)
endif ()
if (${CONFIG_GENERIC_EARLY_IOREMAP})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} early_ioremap)
endif ()
if (${CONFIG_ZSMALLOC})
    add_c_source(SOURCE_FILES ${LOCAL_PATH} zsmalloc)
endif ()

add_library(mm STATIC ${SOURCE_FILES})
target_link_libraries(mm
        mm-mmu
        )